# furia-gemini-chatbot

./: Dockerfile  README.md  pyproject.toml  requirements.txt
backend/: main.py
frontend/: index.html  script.js  style.css
